2008-09-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el: 379 version was renamed to revision in the entire file.
	(ucm-show-diff-link-handler): call `ucm-actb-show-diff'
	(ucm-actb-file-optimize-revisions): new function
	(ucm-actb-revision): new slot: previous^ 
	(ucm-actb-revision-previous): new function
	(ucm-actb-show-diff): new function
	(ucm-actb-optimize-display-command): new function

2008-09-08  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-refresh-files): use `revert-buffer'
	(vc-clearcase-diff): 380 allow nil REV1, meaning compare a
	checkout with its predecessor.

2008-09-04  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-refresh-files): 378 use
	`vc-mode-line' and `vc-resynch-buffer' to refresh the vc state
 
2008-09-04  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-actb-create-ewoc): 375 add the stream to the ewoc
	header.

2008-09-02  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (cleartool-wait-for): accept a nil `tid' as an
	argument.
	(clearcase-fprop): new slots: activity^, activity-tid^, renamed
	comment^ and comment-tid^ from comment and comment-tid.
	(clearcase-reset-fprop): clear comment-tid^, comment^,
	activity-tid^ and activity^ slots
	(clearcase-fprop-comment, clearcase-fprop-activity): new
	functions.
	(vc-start-entry): no need to wait for the comment tid,
	`clearcase-fprop-comment' does that
	(vc-clearcase-state): fetch the comment and activity (in an UCM
	view) if the file is checked out.

2008-08-29  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-print-log): only print the history
	of the current branch by default.  Print full history when the
	prefix arg is specified.

2008-08-26  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-edcs-font-lock-keywords): new
	variable
	(clearcase-edcs-mode-syntax-table): new variable